--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Data Dunkers
 
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme
